Thu Oct 26 14:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
	  Added orbsvcs/tests/Event/UDP test which tests the rtec
	  udp federation

Thu Oct 26 11:19:45 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Added include "ace/config-posix.h" and removed defines
          that are already defined by config-posix.h.

Thu Oct 26 10:29:49 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/config-posix.h:
          Removed duplicate check of _POSIX_MESSAGE_PASSING.

Thu Oct 26 07:48:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Truncate.h:
          Added partial specialization for when types are the same, fixes compile
          problems in the ACE lib with Borland

Thu Oct 26 07:01:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
          Added ACE_LACKS_INTPTR_T, VxWorks 5.5.x seems not to deliver this
          type

Thu Oct 26 00:31:56 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Auto_Ptr.h:

          Added missing "element_type" typedef.

          (ACE_auto_ptr_reset):

          Introduced this new function template to simplify the
          ACE_AUTO_PTR_RESET macro implementation, to support
          ACE's other auto_ptr-like class templates
          (e.g. ACE_Auto_Array_Ptr<>), and to make auto_ptr
          reset() operations convenient and easy for those needing the
          ACE_AUTO_PTR_RESET functionality to.  Users now need only
          perform a call like:

            ACE_auto_ptr_reset (my_auto_ptr_instance, new foo);

          Note that ACE_AUTO_PTR_RESET support for ACE's other
          auto_ptr-like classes isn't strictly necessary since they all
          support the reset() method.

          Addresses build failures on platforms that define
          ACE_LACKS_AUTO_PTR_RESET and in code that expects to use